--- a/portfolio/styles2.css
+++ b/portfolio/styles2.css
@@ -24,7 +24,7 @@ main {
 
 button {
   background: #007bff;
-  color: white;
+  color: rgb(13, 39, 105);
   padding: 10px 15px;
   border: none;
   border-radius: 5px;
