--- a/styles.css
+++ b/styles.css
@@ -410,12 +410,13 @@ body {
 /* Footer */
 .footer {
     background: #202020;
-    color: white;
+    color: rgba(255, 255, 255, 0);
     padding: 4rem 2rem;
 }
 
 .footer-content {
     max-width: 1200px;
+    max-height: 300px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -901,25 +902,26 @@ body {
     height: 100%;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: #000; /* Dark background for letterboxing */
 }
 
 /* Define background images for each slide */
 .carousel-slide:nth-child(1) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), 
-                      url('images/banner.jpg');
+                      url('images/home_carrousel/Audience.jpg');
 }
 
 .carousel-slide:nth-child(2) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                      url('images/home_carrousel/hero2.webp');
+                      url('images/home_carrousel/Superior engineering.jpg');
 }
 
 .carousel-slide:nth-child(3) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                      url('images/home_carrousel/hero3.webp');
+                      url('images/home_carrousel/grip and control.jpg');
 }
 
 .carousel-slide.active {
