--- a/styles.css
+++ b/styles.css
@@ -1021,17 +1021,22 @@ body {
 /* Define background images for each slide */
 .carousel-slide:nth-child(1) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), 
-                      url('images/home_carrousel/grip and control.jpg');
+                      url('images/home_carrousel/banner1.jpg');
 }
 
 .carousel-slide:nth-child(2) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), 
-                      url('images/home_carrousel/Superior engineering.jpg');
+                      url('images/home_carrousel/banner2.jpg');
 }
 
 .carousel-slide:nth-child(3) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), 
-                      url('images/home_carrousel/grip and control.jpg');
+                      url('images/home_carrousel/banner3.jpg');
+}
+
+.carousel-slide:nth-child(4) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), 
+                      url('images/home_carrousel/banner4.jpg');
 }
 
 .carousel-slide.active {
